@@ -1,10 +1,8 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.29 2005-07-22 00:02:57 achu Exp $
+## $Id: Makefile.am,v 1.30 2005-07-22 21:46:54 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
-
-man1_MANS  = cerebro.1
 
 man3_MANS  = libcerebro.3 \
 	     cerebro.3 \
